--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,26 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+/* Custom Scrollbar */
+.customScrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.customScrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.customScrollbar::-webkit-scrollbar-thumb {
+  background-color: #8417ff;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  background-clip: padding-box;
+}
+
+.customScrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #6411b2;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
